syntax = "proto3";

// 生产代码包的包名
package chat;

// 生成代码包位置
option go_package = "./chat";

// 请求消息定义
message ChatReq{
  string msg = 1;
}

// 回应消息定义
message ChatResp{
  string msg = 1;
}

// 服务定义
service Chat{
  // 服务器流服务,服务器可以多次发送信息
  rpc ChatServerStream(ChatReq) returns(stream ChatResp){}
  // 客户端流服务,客户端可以多次发送信息
  rpc ChatClientStream(stream ChatReq) returns(ChatResp){}
  // 双向流服务,服务端、客户端都可以多次发送信息
  rpc ChatBiStreams(stream ChatReq) returns(stream ChatResp){}
}